# gtest_test

./: CMakeLists.txt
src/main/: mymath.cpp  mymath.h
src/test/: sampleTest1.cpp  sampleTest1.h  testmain.cpp
